baml_language/crates/baml_tests/snapshots/parser_expressions/baml_tests__parser_expressions__04_7_mir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 16243
---
=== MIR2 ===
fn user.Calculate() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // a
    let _2: int // b
    let _3: int
    let _4: int // c
    let _5: int
    let _6: int
    let _7: int // d
    let _8: int
    let _9: int
    let _10: int
    let _11: int

    bb0: {
        _1 = const 1_i64 + const 2_i64;
        _3 = copy _1;
        _2 = copy _3 * const 3_i64;
        _6 = copy _2;
        _5 = copy _6 / const 2_i64;
        _4 = copy _5 - const 1_i64;
        _9 = copy _1;
        _10 = copy _2;
        _8 = copy _9 + copy _10;
        _11 = copy _4;
        _7 = copy _8 * copy _11;
        _0 = copy _7;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.FieldAccess(user: user.User) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: user.User // user // param
    let _2: user.Profile
    let _3: string // theme
    let _4: user.Settings
    let _5: user.Profile
    let _6: string[]
    let _7: 0

    bb0: {
        _2 = copy _1.1;
        _5 = copy _1.1;
        _4 = copy _5.1;
        _3 = copy _4.0;
        _6 = copy _1.2;
        _0 = copy _3;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.IndexAccess(users: user.IndexUser[]) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: user.IndexUser[] // users // param
    let _2: 0
    let _3: int // idx
    let _4: int
    let _5: string // firstName
    let _6: user.IndexUser
    let _7: 0
    let _8: string[]
    let _9: user.IndexUser
    let _10: 0
    let _11: 0

    bb0: {
        _3 = const 1_i64;
        _4 = copy _3;
        _6 = copy _1[_7];
        _5 = copy _6.0;
        _9 = copy _1[_10];
        _8 = copy _9.2;
        _0 = copy _5;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.TestPrecedence() -> bool {
    // Locals:
    let _0: bool // _0 // return
    let _1: int // a
    let _2: 12
    let _3: 6
    let _4: int
    let _5: 12
    let _6: bool // d
    let _7: true
    let _8: false

    bb0: {
        _2 = const 3_i64 * const 4_i64;
        _1 = const 2_i64 + copy _2;
        _3 = const 2_i64 * const 3_i64;
        _4 = copy _1;
        _5 = const 10_i64 + const 2_i64;
        _7 = const true;
        _6 = copy _7;
        branch copy _7 -> [bb4, bb1];
    }

    bb1: {
        _8 = const false;
        _6 = copy _8;
        branch copy _8 -> [bb2, bb3];
    }

    bb2: {
        _6 = const false;
        goto -> bb3;
    }

    bb3: {
        goto -> bb4;
    }

    bb4: {
        _0 = copy _6;
        goto -> bb5;
    }

    bb5: {
        return;
    }
}
