baml_language/crates/baml_tests/snapshots/parser_expressions/baml_tests__parser_expressions__04_thir.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
=== TYPE INFERENCE ===
  Function Calculate:
    Return: unknown
  Function ConditionalLogic:
    Return: unknown
    Params:
      - age: unknown
  Function HandleStatus:
    Return: unknown
    Params:
      - status: unknown
  Function ComplexMatch:
    Return: unknown
    Params:
      - value: unknown
  Function TestPrecedence:
    Return: unknown
