baml_language/crates/baml_tests/snapshots/parser_expressions/baml_tests__parser_expressions__04_tir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.Calculate() -> int {
  { : never
    let a = 1 Add 2 : 3 -> int
    let b = a Mul 3 : int
    let c = b Div 2 Sub 1 : int
    let d = a Add b Mul c : int
    return d : int
  }
}
function user.FieldAccess(user: user.User) -> string {
  { : never
    let name = user.name : string
    let bio = user.profile.bio : string
    let theme = user.profile.settings.theme : string
    let firstTag = user.tags[0] : string
    return theme : string
  }
}
class user.User {
  name: string
  profile: user.Profile
  tags: string[]
}
class user.Profile {
  bio: string
  settings: user.Settings
}
class user.Settings {
  theme: string
}
class user.IndexUser {
  name: string
  age: int
  tags: string[]
}
function user.IndexAccess(users: user.IndexUser[]) -> string {
  { : never
    let first = users[0] : user.IndexUser
    let idx = 1 : 1 -> int
    let second = users[idx] : user.IndexUser
    let firstName = users[0].name : string
    let tag = users[0].tags[0] : string
    return firstName : string
  }
}
function user.TestPrecedence() -> bool {
  { : never
    let a = 2 Add 3 Mul 4 : 14 -> int
    let c = 2 Mul 3 Add 4 : 10 -> int
    let b = a Gt 10 Add 2 : bool
    let d = true Or false And false : true -> bool
    return d : bool
  }
}
